* Fix issue #753 fix to upgrade code to be compatible with later versions of Mockito (thanks to emmaLP @emmaLP for pull request)
* Fix issue #763 whenNew not matching constructor when null is passed as first or last argument. (thanks to @podarsmarty podarsmarty for pull request)
* Fix issue #781 Call mocked equals static method instead of real (thanks to @Ilya-Gh Ilya Ghirici for pull request)

Change log 1.6.6 (2016-11-04)
-----------------------------
* Added support for setting private static final fields in Whitebox.setInternalState  (thanks to Andrei Petcu @andreicristianpetcu for pull request)
* Added support for specifying constructor parameters for Mockito for whenNew case (Only mock specific calls to new #31)
* Fixed #668 @Mock fields are not injected anymore (1.6.5 regression)
* Fixed #676 Using Powermock with Roo/AspectJ gives NullPointerException (thanks to Sebastian Saip @ssaip for pull request)
* Fixed #656 TooManyActualInvocations when class is prepared for test.
* Fixed #695 ClassNotFoundException when loading cglib enhanced classes created by Spring
* Fixed Java 6 compatibility issue in org.powermock.utils.StringJoiner (which accidentally referenced Java 7 API's)
* Fixed #701 StackOverflowError mocking final class extending non-public abstract class overriding equals method
* Fixed #707 PowerMock should ignore and keep synthetic method/fields when modifies class
* Fixed #645 jacoco offline instrumentation incompatibility with powermock byte-code manipulation when using @SuppressStaticInitializationFor 
* Fixed #704 PowerMockito 1.6.5 throws java.lang.SecurityException signer information mismatch 
* Refactoring: Move ProxyFramework from api modules to `reflect` module.
* Renamed org.powermock.reflect.internal.WhiteboxImpl.getAllMetodsExcept to org.powermock.reflect.internal.WhiteboxImpl.getAllMethodsExcept (typo)